updated some changes

--- a/admin/pages/reciveDocuments.html
+++ b/admin/pages/reciveDocuments.html
@@ -133,9 +133,9 @@
                 <label for="inputPassword3" class="col-sm-3 control-label">Date of Death/ In Service Death</label>
                 <div class="col-sm-8">
                     <p class="input-group">
-                      <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="retired_employee.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close"/>
+                      <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="retired_employee.dod" is-open="popup3.opened" datepicker-options="dateOptions" close-text="Close"/>
                       <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+                        <button type="button" class="btn btn-default" ng-click="open3()"><i class="glyphicon glyphicon-calendar"></i></button>
                       </span>
                     </p>
                 </div>
