--- a/admin/pages/sactionLetter.html
+++ b/admin/pages/sactionLetter.html
@@ -35,14 +35,14 @@
         						<strong>Sub :</strong>
         					</div>
         					<div class="col-sm-10">
-        						<p>Sanction of pension in favour of Sri/Smt.  <label class="contentEdit">{{retired_employee.name}}</label> Retd. of  <label class="contentEdit">{{retired_employee.designation}}</label> Muncipal Corporation/Municipality/ NAC in the terms of H&UD Department Resolution No.  <label contenteditable="true" class="contentEdit"></label>, dated. 01.08.2014</p>
+        						<strong>Sanction of pension in favour of Sri/Smt.  <label class="contentEdit">{{retired_employee.name}}</label> Retd. of  <label contenteditable="true" class="contentEdit">{{retired_employee.designation}}</label> Muncipal Corporation/Municipality/ NAC in the terms of H&UD Department Resolution No.  <label contenteditable="true" class="contentEdit"></label>, dated. <label contenteditable="true" class="contentEdit"></label></strong>
         					</div>
         				</div>
 
         				<div class="row m-b-20">
         					<div class="col-sm-12">
 								<strong>Sir,</strong>
-        						<p style="text-indent: 40px;">With reference to the above noted subject, I am directed to say that consquent upon revision of Pension /Family Pension , T.I and Gratuity of the retired empolyee of ULBs of the State includeing Municipal Corporation as per H & U. Department Resolution No. <label contenteditable="true" class="contentEdit"></label>/HUD dated  <label contenteditable="true" class="contentEdit"></label>and their Council Resolution No. <label contenteditable="true" class="contentEdit"></label>dt <label contenteditable="true" class="contentEdit"></label> the pension and Gratuity of Sri  <label class="contentEdit">{{retired_employee.name}}</label>, Retd. <label class="contentEdit">{{retired_employee.designation}}</label>are refixed w. e. f  <label contenteditable="true" class="contentEdit"></label> in the revised scale of pay  <label contenteditable="true" class="contentEdit"></label>(as per  <label contenteditable="true" class="contentEdit"></label> Pay Commision Report) as detailed below. </p>
+        						<p style="text-indent: 40px;">With reference to the above noted subject, I am directed to say that consquent upon revision of Pension /Family Pension , T.I and Gratuity of the retired empolyee of ULBs of the State includeing Municipal Corporation as per H & U. Department Resolution No. <label contenteditable="true" class="contentEdit"></label>/HUD dated  <label contenteditable="true" class="contentEdit"></label>and their Council Resolution No. <label contenteditable="true" class="contentEdit"></label>dt <label contenteditable="true" class="contentEdit"></label> the pension and Gratuity of Sri  <label class="contentEdit">{{retired_employee.name}}</label>, Retd. <label contenteditable="true" class="contentEdit">{{retired_employee.designation}}</label>are refixed w. e. f  <label contenteditable="true" class="contentEdit"></label> in the revised scale of pay  <label contenteditable="true" class="contentEdit"></label>(as per  <label contenteditable="true" class="contentEdit"></label> Pay Commision Report) as detailed below. </p>
         					</div>
         				</div>
         				<div class="row m-b-20">
@@ -50,7 +50,7 @@
 								<ol>
 									<li>Pension per Month  <label contenteditable="true" class="contentEdit"></label> + T.I to the par with DA as admissible to the regular employees of ULB from time to time</li>
 									<li>Revised Gratuity</li>
-									<li>The Pension and Gratuity sanction order issue earlier vide H & U.D Dept. Letter No  <label contenteditable="true" class="contentEdit"></label>/HUD., Dated  <label contenteditable="true" class="contentEdit"></label>is hereby superseded. Care should be taken while payment of differential arrear. Pensionary dues and Gratuity to Sri <label class="contentEdit">{{retired_employee.name}}</label> Retd. <label class="contentEdit">{{retired_employee.designation}}</label> by adjusting the amount already paid to him/her previously. </li>
+									<li>The Pension and Gratuity sanction order issue earlier vide H & U.D Dept. Letter No  <label contenteditable="true" class="contentEdit"></label>/HUD., Dated  <label contenteditable="true" class="contentEdit"></label>is hereby superseded. Care should be taken while payment of differential arrear. Pensionary dues and Gratuity to Sri <label class="contentEdit">{{retired_employee.name}}</label> Retd. <label contenteditable="true" class="contentEdit">{{retired_employee.designation}}</label> by adjusting the amount already paid to him/her previously. </li>
 									<li>The service book of Sri <label contenteditable="true" class="contentEdit"></label> is sent herewith which may please be acknowledged.</li>
 									<li>The sanction order Number & Date must be entered in the service book. </li>
 								</ol>
@@ -67,9 +67,9 @@
         				<div class="row m-t-40">
 							<div class="col-sm-6"></div>
 							<div class="col-sm-6 text-right">
-								<span class="clearfix">Director Municipal Administration & <br>
+								<strong class="clearfix">Director Municipal Administration & <br>
 								Ex-Offico Joint Secy. to Government
-								</span>
+								</strong>
 							</div>
         				</div>
         				<div class="row">
@@ -123,7 +123,7 @@
         						<strong>Sub :</strong>
         					</div>
         					<div class="col-sm-10">
-        						<p>Sanction of Family pension in favour of Sri/Smt.  <label contenteditable="true" class="contentEdit"></label> W/o/H/o-  <label contenteditable="true" class="contentEdit"></label>, Ex-   <label contenteditable="true" class="contentEdit"></label> of  <label contenteditable="true" class="contentEdit"></label> Muncipal Corporation/Municipality/ NAC in the terms of H&UD Department Resolution No.  <label contenteditable="true" class="contentEdit"></label>, dtd. 01.08.2014</p>
+        						<strong>Sanction of Family pension in favour of Sri/Smt.  <label contenteditable="true" class="contentEdit"></label> W/o/H/o-  <label contenteditable="true" class="contentEdit"></label>, Ex-   <label contenteditable="true" class="contentEdit"></label> of  <label contenteditable="true" class="contentEdit"></label> Muncipal Corporation/Municipality/ NAC in the terms of H&UD Department Resolution No.  <label contenteditable="true" class="contentEdit"></label>, dtd. <label contenteditable="true" class="contentEdit"></label></strong>
         					</div>
         				</div>
 
@@ -162,14 +162,14 @@
         				<div class="row m-t-40">
 							<div class="col-sm-6"></div>
 							<div class="col-sm-6 text-right">
-								<span class="clearfix">Director Municipal Administration & <br>
+								<strong class="clearfix">Director Municipal Administration & <br>
 								Ex-Offico Joint Secy. to Government
-								</span>
+								</strong>
 							</div>
         				</div>
         				<div class="row">
 							<div class="col-sm-12 m-t-20">
-								Memo No  <label contenteditable="true" class="contentEdit"></label>/HUD, Bhubaneswar, Dated the <span class="text-u-l">18/09/2016</span><br>
+								Memo No  <label contenteditable="true" class="contentEdit"></label>/HUD, Bhubaneswar, Dated the <label contenteditable="true" class="contentEdit"></label><br>
 								Copy forwarded to Sri <label contenteditable="true" class="contentEdit"></label>/2 copies for Guard File for information
 							</div>
         				</div>
