--- a/admin/pages/auditObjection.html
+++ b/admin/pages/auditObjection.html
@@ -44,7 +44,7 @@
         						<strong>Sub :</strong>
         					</div>
         					<div class="col-sm-10">
-        						<p>Compliance to Audit Objection </p>
+        						<strong>Compliance to Audit Objection </strong>
         					</div>
         				</div>
         				<hr/>
@@ -69,7 +69,7 @@
         				<div class="row m-t-40">
 							<div class="col-sm-8"></div>
 							<div class="col-sm-4 text-right">
-								<span class="clearfix">Under Secretary to Goverment</span>
+								<strong class="clearfix">Under Secretary to Goverment</strong>
 							</div>
         				</div>
         				<div class="row">
