--- a/admin/pages/header.html
+++ b/admin/pages/header.html
@@ -1,7 +1,7 @@
 <header class="main-header">
   <a ui-sref="dashboard" class="logo">
     <span class="logo-mini"><b>O</b>MC</span>
-    <span class="logo-lg"><b>Odisha-</b>eMunicipality</span>
+    <span class="logo-lg"><b>Odisha-</b>ePension</span>
   </a>
   <nav class="navbar navbar-static-top">
     <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
